--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
                             'Authorization':'token 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',
                         },
                         data: {
-                            'event_type': "网页触发构建",
+                            'event_type': "remotebuild",
                             'client_payload':{
-                                
+                                'url': this.url
                             }
                         }
                     })
