feat: 更新页面完成

--- a/index.html
+++ b/index.html
@@ -31,7 +31,37 @@
 
     <script>
         // 加密压缩
-        eval(function(p,a,c,k,e,d){e=function(c){return(c<a?"":e(parseInt(c/a)))+((c=c%a)>35?String.fromCharCode(c+29):c.toString(36))};if(!''.replace(/^/,String)){while(c--)d[e(c)]=k[c]||e(c);k=[function(e){return d[e]}];e=function(){return'\\w+'};c=1;};while(c--)if(k[c])p=p.replace(new RegExp('\\b'+e(c)+'\\b','g'),k[c]);return p;}('0 8={5(){j{1:""}},4:{k(){0 7=\'h\';0 6=\'i\'0 3=\'n\';o({4:\'l\',1:\'m://a.9.f/g/c/d/b\',e:{\'p\':\'A/B.9.y-z+E\',\'F\':\'C \'+7+6+3,},5:{\'D\':"s",\'t\':{\'1\':q.1}}})}}};0 2=r.w(8);2.x(u);2.v(\'#2\');',42,42,'const|url|app|tmp3|methods|data|tmp2|tmp1|App|github|api|dispatches|XingXiaoWu|electron|headers|com|repos|ghp_MNG2Dzbzq1|iH6ya1lWeqRi9b|return|submit|post|https|0ktOOX1jKnyU|axios|Accept|this|Vue|remotebuild|client_payload|ElementPlus|mount|createApp|use|everest|preview|application|vnd|token|event_type|json|Authorization'.split('|'),0,{}))
+        const App = {
+            data() {
+                return {
+                    url: ""
+                }
+            },
+            methods: {
+                submit() {
+                    const tmp1 = 'ghp_MNG2Dzbzq1';
+                    const tmp2 = 'iH6ya1lWeqRi9b'
+                    const tmp3 = '0ktOOX1jKnyU';
+                    axios({
+                        methods: 'post',
+                        url: 'https://api.github.com/repos/XingXiaoWu/electron/dispatches',
+                        headers: {
+                            'Accept': 'application/vnd.github.everest-preview+json',
+                            'Authorization': 'token ' + tmp1 + tmp2 + tmp3,
+                        },
+                        data: {
+                            'event_type': "remotebuild",
+                            'client_payload': {
+                                'url': this.url
+                            }
+                        }
+                    })
+                }
+            }
+        };
+        const app = Vue.createApp(App);
+        app.use(ElementPlus);
+        app.mount('#app');
     </script>
 </body>
 
