--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     const tmp2 = 'iH6ya1lWeqRi9b'
                     const tmp3 = '0ktOOX1jKnyU';
                     axios({
-                        methods: 'post',
+                        method: 'post',
                         url: 'https://api.github.com/repos/XingXiaoWu/electron/dispatches',
                         headers: {
                             'Accept': 'application/vnd.github.everest-preview+json',
