--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
                 <el-input v-model="form.appid" placeholder="com.apple.aaa"></el-input>
             </el-form-item>
         </el-form>
-        <el-button type="primary" @click="submit">确认提交</el-button>
+        <el-button type="primary" v-loading="loading1" @click="loading1=true;submit('windowsbuild')">打windows包
+        </el-button>
+        <el-button type="primary" v-loading="loading2" @click="loading2=true;submit('macbuild')">打mac包</el-button>
+        <el-button type="primary" v-loading="loading3" @click="loading3=true;submit('linuxbuild')">打linux包</el-button>
         <a v-if="build" href="https://github.com/XingXiaoWu/electron/actions">点击前往查看构建进度</a>
         <p v-if="build">其他需求可联系VX：329106954</p>
     </div>
@@ -51,11 +54,14 @@
                         name: "",
                         appid: ""
                     },
-                    build: false
+                    build: false,
+                    loading1: false,
+                    loading2: false,
+                    loading3: false,
                 }
             },
             methods: {
-                submit() {
+                submit(buildType) {
                     // 大哥，都是干开发的，看到这行注释，麻烦就不要用这个token了，给条活路
                     const site = /^(((ht|f)tps?):\/\/)?[\w-]+(\.[\w-]+)+([\w.,@?^=%&:/~+#-\(\)]*[\w@?^=%&/~+#-\(\)])?$/
                     if (!new RegExp(site).test(this.form.url)) {
@@ -73,7 +79,7 @@
                             'Authorization': 'token ' + tmp1 + tmp2 + tmp3,
                         },
                         data: {
-                            'event_type': "remotebuild",
+                            'event_type': buildType,
                             'client_payload': {
                                 'url': this.form.url,
                                 'name': this.form.name,
@@ -85,6 +91,10 @@
                         this.$message.success('请求发送成功')
                     }).catch(() => {
                         this.$message.error('构建失败，请联系329106954@qq.com查看原因')
+                    }).finally(() => {
+                        this.loading1 = false
+                        this.loading2 = false
+                        this.loading3 = false
                     })
                 }
             }
