--- a/index.html
+++ b/index.html
@@ -36,10 +36,13 @@
                 <el-input v-model="form.appid" placeholder="com.apple.aaa"></el-input>
             </el-form-item>
         </el-form>
-        <el-button type="primary" v-loading="loading1" @click="loading1=true;submit('windowsbuild')">打windows包
-        </el-button>
-        <el-button type="primary" v-loading="loading2" @click="loading2=true;submit('macbuild')">打mac包</el-button>
-        <el-button type="primary" v-loading="loading3" @click="loading3=true;submit('linuxbuild')">打linux包</el-button>
+        <el-row>
+            <el-button type="primary" v-loading="loading1" @click="loading1=true;submit('windowsbuild')">打windows包
+            </el-button>
+            <el-button type="primary" v-loading="loading2" @click="loading2=true;submit('macbuild')">打mac包</el-button>
+            <el-button type="primary" v-loading="loading3" @click="loading3=true;submit('linuxbuild')">打linux包
+            </el-button>
+        </el-row>
         <a v-if="build" href="https://github.com/XingXiaoWu/electron/actions">点击前往查看构建进度</a>
         <p v-if="build">其他需求可联系VX：329106954</p>
     </div>
