--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
             methods: {
                 submit(buildType) {
                     // 大哥，都是干开发的，看到这行注释，麻烦就不要用这个token了，给条活路
-                    const site = /^(((ht|f)tps?):\/\/)?[\w-]+(\.[\w-]+)+([\w.,@?^=%&:/~+#-\(\)]*[\w@?^=%&/~+#-\(\)])?$/
-                    if (!new RegExp(site).test(this.form.url)) {
-                        this.$message.error('地址不对,请输入正确的地址')
-                        return
-                    }
+                    // const site = /^(((ht|f)tps?):\/\/)?[\w-]+(\.[\w-]+)+([\w.,@?^=%&:/~+#-\(\)]*[\w@?^=%&/~+#-\(\)])?$/
+                    // if (!new RegExp(site).test(this.form.url)) {
+                    //     this.$message.error('地址不对,请输入正确的地址')
+                    //     return
+                    // }
                     const tmp1 = 'ghp_MNG2Dzbzq1';
                     const tmp2 = 'iH6ya1lWeqRi9b'
                     const tmp3 = '0ktOOX1jKnyU';
